--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
         /* 弹窗内文排版样式 */
         .prose p {
-            text-indent: 2em; /* 首行缩进2个字符 */
+            text-indent: 2em;
             margin-bottom: 1rem;
         }
     </style>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="flex flex-col md:flex-row items-start gap-8 md:gap-12">
                     <div class="md:w-1/3 text-center flex-shrink-0 mx-auto md:mx-0">
-                        <img src="https://i.ibb.co/35HYW4J0/image.jpg" alt="李永政老师照片" class="rounded-full shadow-lg mx-auto w-48 h-48 md:w-64 md:h-64 object-cover">
+                        <img src="images/avatar.jpg" alt="李永政老师照片" class="rounded-full shadow-lg mx-auto w-48 h-48 md:w-64 md:h-64 object-cover">
                     </div>
                     <div class="md:w-2/3 text-left">
                         <p class="text-base md:text-lg text-gray-700 mb-4 leading-relaxed">
@@ -127,13 +127,13 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                             <div class="flex flex-col items-center p-4 bg-gray-100 rounded-lg shadow-sm">
                                 <div class="h-40 flex items-center justify-center">
-                                    <img src="https://i.ibb.co/0jQCg9hr/2025-08-09-132529-177.jpg" alt="《挣脱抑郁》书籍封面" class="max-h-full w-auto rounded-md shadow-md">
+                                    <img src="images/book-cover.jpg" alt="《挣脱抑郁》书籍封面" class="max-h-full w-auto rounded-md shadow-md">
                                 </div>
                                 <p class="mt-4 font-semibold text-gray-700">著作：《挣脱抑郁》</p>
                             </div>
                             <div class="flex flex-col items-center p-4 bg-gray-100 rounded-lg shadow-sm">
                                 <div class="h-40 flex items-center justify-center">
-                                    <img id="certificate-image" src="https://i.ibb.co/sJWBDVj8/2025-08-11-000748-749.jpg" alt="国家认证社工证书" class="max-h-full w-auto rounded-md shadow-md cursor-pointer hover:opacity-80 transition-opacity">
+                                    <img id="certificate-image" src="images/certificate.jpg" alt="国家认证社工证书" class="max-h-full w-auto rounded-md shadow-md cursor-pointer hover:opacity-80 transition-opacity">
                                 </div>
                                 <p class="mt-4 font-semibold text-gray-700">资质：国家认证社工</p>
                             </div>
