--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="bg-white p-6 md:p-12 rounded-lg shadow-lg flex flex-col md:flex-row gap-8 md:gap-12 items-center">
                     <div class="md:w-1/4 text-center flex-shrink-0">
-                        <img src="https://i.ibb.co/0jQCg9hr/2025-08-09-132529-177.jpg" alt="《挣脱抑郁》书籍封面" class="w-48 md:w-full rounded-lg shadow-2xl mx-auto transform hover:scale-105 transition-transform duration-300">
+                        <img src="images/book-cover.jpg" alt="《挣脱抑郁》书籍封面" class="w-48 md:w-full rounded-lg shadow-2xl mx-auto transform hover:scale-105 transition-transform duration-300">
                     </div>
                     <div class="md:w-3/4 text-left">
                         <h3 class="text-xl md:text-2xl font-bold mb-4">一本从地狱到人间的康复实录</h3>
