--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             -moz-osx-font-smoothing: grayscale;
         }
         .hero-bg {
-            background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=2070&auto=format&fit=crop');
+            background-image: url('images/hero-background.avif');
             background-size: cover;
             background-position: center;
         }
