--- a/admin.html
+++ b/admin.html
@@ -14,9 +14,7 @@
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4/dist/av-live-query-min.js"></script>
-    
+    <script src="js/av-live-query-min.js"></script>
     <style>
         body { font-family: 'Noto Sans SC', sans-serif; }
         .message-card { transition: all 0.3s ease; }
